--- a/emisor_ts/package.json
+++ b/emisor_ts/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@types/node": "^24.2.0",
     "@types/readline-sync": "^1.4.8",
+    "tsx": "^4.20.3",
     "typescript": "^5.9.2"
   },
   "scripts": {
