--- a/emisor_ts/package.json
+++ b/emisor_ts/package.json
@@ -4,11 +4,14 @@
   "main": "index.js",
   "dependencies": {
     "readline-sync": "^1.4.10",
-    "undici-types": "^7.10.0"
+    "undici-types": "^7.10.0",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
-    "@types/node": "^24.2.0",
+    "@types/node": "^24.2.1",
     "@types/readline-sync": "^1.4.8",
+    "@types/ws": "^8.18.1",
+    "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "typescript": "^5.9.2"
   },
